# odicpp

./: CMakeLists.txt  README.md
src/: func.cpp  func.hpp  inder.cpp  infer.cpp  prep.py  testcv.cpp  tools.py
